--- a/cityzoom-nuxt/assets/mixins.scss
+++ b/cityzoom-nuxt/assets/mixins.scss
@@ -1,3 +1,7 @@
+@mixin row {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 @mixin transition($target, $seconds, $type, $delay) {
     -webkit-transition: $target $seconds $type $delay;
