Login and register page

--- a/cityzoom/web_service/assets/global.scss
+++ b/cityzoom/web_service/assets/global.scss
@@ -15,3 +15,9 @@
     justify-content: center !important;
     align-items: center !important;
 }
+
+input {
+    padding: 2px 4px;
+    border-radius: 10px;
+    width: 320px;
+}
