some scss mixins to ease...

--- a/cityzoom/web_service/assets/mixins.scss
+++ b/cityzoom/web_service/assets/mixins.scss
@@ -32,3 +32,9 @@
     align-items: $align;
     flex-direction: $dir;
 }
+
+@mixin shadow($x, $y, $blur, $spread, $color) {
+    box-shadow: $x $y $blur $spread $color;
+    -webkit-box-shadow: $x $y $blur $spread $color;
+    -moz-box-shadow: $x $y $blur $spread $color;
+}
