--- a/cityzoom/web_service/assets/global.scss
+++ b/cityzoom/web_service/assets/global.scss
@@ -17,9 +17,10 @@
 }
 
 input {
-    border-radius: 5px;
+    border-radius: 10px;
     padding: 0px 2px;
-    width: 320px;
+    width: 420px;
     font-size: 20px;
     font-weight: 700;
+    font-size: 1.4rem;
 }
