--- a/cityzoom/web_service/assets/global.scss
+++ b/cityzoom/web_service/assets/global.scss
@@ -58,22 +58,22 @@ html {
     }
 }
 
-span {
-    &.x-small {
-        font-size: 1.2rem;
-    }
-    &.small {
-        font-size: 1.4rem;
-    }
-    &.normal {
-        font-size: 1.625rem;
-    }
-    &.big {
-        font-size: 2rem;
-    }
-    &.x-big {
-        font-size: 2.4rem;
-    }
+.xsmall {
+    font-size: 1.2rem;
 }
-
+.small {
+    font-size: 1.4rem;
+}
+.normal {
+    font-size: 1.625rem;
+}
+.big {
+    font-size: 2rem;
+}
+.xbig {
+    font-size: 2.4rem;
+}
+.bold {
+    font-weight: bold;
+}
 
