--- a/mobile-app/app/src/main/res/layout/content_main.xml
+++ b/mobile-app/app/src/main/res/layout/content_main.xml
@@ -295,7 +295,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="-1 bar"
+        android:text="1017 hPa"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.752"
